--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyectos en GitHub desde cero (con JS)</title>
+    <title>Manipulación del DOM básica - Curso Práctico de JavaScript</title>
 </head>
 <body>
-    <script src="script.js"></script>
+
+    <h1 pantalla="platzig">Manipulación del DOM básica </h1>
+
+    <p>Esto es un párrafo</p>
+    <p class="parrafo">Esto es un párrafo con clase</p>
+    <p id="pid">Esto es un párrafo con ID</p>
+
+    <input placeholder="Escribe algo aquí" />
+
+
+    <script src="./script.js"></script>
 </body>
 </html>
