--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
 
-    <h1 pantalla="platzig">Manipulación del DOM básica </h1>
+    <h1>Manipulación del DOM básica </h1>
+    <input id="calculo1" placeholder="Escribe algo aquí" />
+    <input id="calculo2" placeholder="Escribe algo aquí" />
+    <button id="btnCalcular" onclick="btnOnclick()">Calcular</button>
 
-    <p>Esto es un párrafo</p>
-    <p class="parrafo">Esto es un párrafo con clase</p>
-    <p id="pid">Esto es un párrafo con ID</p>
-
-    <input placeholder="Escribe algo aquí" />
+    <p id="result"></p>
 
 
     <script src="./script.js"></script>
