--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
 
-    <h1>Manipulación del DOM básica </h1>
-    <input id="calculo1" placeholder="Escribe algo aquí" />
-    <input id="calculo2" placeholder="Escribe algo aquí" />
-    <button id="btnCalcular" onclick="btnOnclick()">Calcular</button>
+    <form id="form">
+        <h1>Manipulación del DOM básica </h1>
+        <input id="calculo1" placeholder="Escribe algo aquí" />
+        <input id="calculo2" placeholder="Escribe algo aquí" />
+        <button id="btnCalcular">Calcular</button>
 
     <p id="result"></p>
+    </form>
 
 
     <script src="./script.js"></script>
